[project]
name = "gst-mini"
version = "0.1.0"
description = "Simplified GStreamer learning framework for understanding buffer synchronization and timing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gst_mini"]

[tool.uv]
dev-dependencies = []

[tool.pyright]
include = ["src", "examples"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
